fixed layout of RMP results list on mobile

--- a/components/link.module.scss
+++ b/components/link.module.scss
@@ -19,7 +19,7 @@
     text-decoration: none!important;
     font-variant: inherit!important;
     font-weight: inherit!important;
-    line-height: inherit!important;
+    // line-height: inherit!important;
     font-family: inherit!important;
     border-radius: inherit!important;
     border: inherit!important;
